kubernetes/projects/home-automation/apps/cups/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cups
  labels:
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: cups
    app.kubernetes.io/part-of: home-automation
    field.cattle.io/projectId: p-qqtgt
    kubernetes.io/metadata.name: cups
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
  annotations:
    field.cattle.io/projectId: local:p-qqtgt
    helm.sh/resource-policy: keep
    meta.helm.sh/release-name: cups
    meta.helm.sh/release-namespace: cups
