kubernetes/projects/home-automation/apps/cups/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cups-network-boundary
  namespace: cups
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: cups
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - ipBlock:
            cidr: 192.168.1.0/24
        - ipBlock:
            cidr: 192.168.3.0/24
        - ipBlock:
            cidr: 192.168.4.0/24
      ports:
        - protocol: TCP
          port: 631
  egress: []
